--- a/style.css
+++ b/style.css
@@ -116,15 +116,20 @@ section p {
     transform: translate(-50%, -50%);
 }
 
-/* nog even naar kijken klopt nog niet helemaal */
+/* nog even naar kijken staat naast elkaar moet onder elkaar komen te staan */
 .contact div {
   display: flex;
-  flex-wrap: wrap;
   border: solid #685F5F;
+  padding: 5%;
   background-color: #F0E9E3;
-  position: relative;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  border-radius: 10px;
+  transform: translate(-50%, -50%);
+  margin-top: 20px;
+  list-style-type: none;
 }
-
 
 .containerprojecten {
   position: absolute;
