--- a/style.css
+++ b/style.css
@@ -8,334 +8,208 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Playfair+Display:wght@400..900&display=swap');
 
-main, h1, h2, p, a {
-  font-family: 'Playfair-display', serif;
-  font-weight: 200;
-  line-height: 1.5em;
+:root{
+  --font-headers: "Croissant One", "Times New Roman", Times, serif;
+  --font-size-small: 20px;
+  --background-color: #F0E9E3;
+  --text-color: black;
+  --element-color: #685F5F;
+  --fonts-text: "Open sans", "serif"; 
 }
 
-h1, h2 {
-  margin: 0 5vw 0 0;
-  font-size: xx-large;
-  font-family: "Croissant One", 'Times New Roman', Times, serif;
-}
-
+/* algemene vormgeving */
 h1 {
-  font-size: 35px;
+  font-family: var(--font-headers);
+  font-size: 30px;
+  text-align: center;
 }
 
-h3 {
-  margin-top: 1em;
-  font-family: "Croissant One", 'Times New Roman', Times, serif;
-}
-
-article  h1 {
-  width: 15em;
-  margin-left: 5vw;
-}
-
-p {
+h2 {
+  font-family: var(--font-headers);
   font-size: 25px;
 }
 
-
-
-/* navigatie en footer */
-
-nav, footer{
-  background-color: #685F5F;
-  width: 100%;
-  padding: 20px 20px 20px 20px;
-  z-index: 3;
+p, ul li {
+  font-size: var(--font-size-small);
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  list-style-type: none;
 }
 
-nav {
-  position: fixed;
+/* Vormgeving van de header */
+header nav {
+  border-bottom: 2px solid hotpink;
 }
-
-header nav ul, footer>ul{
+header nav ul{
   display: flex;
   justify-content: space-around;
-  list-style-type: none;
+  font-size: var(--font-size-small);
+  background-color: var(--background-color);
+  padding: 1rem;
 }
 
+header nav ul li a{
+  color: var(--text-color);
+}
+
+
+/* Vormgeving footer */
 footer {
-  position: absolute;
-  bottom: 0;
-}
-
-nav a {
-  font-size: 25px;
-  color: #ffffff;
-}
-
-footer{
-  position: absolute;
-  bottom: 0;
-}
-
-/* nav a:hover {
-  transform: scale(1.5);
-} */
-
-.mask1 { /* Voor de swirl over de foto heen */
-  -webkit-mask-image: url(images/swirl.png);
-  mask-image: url(images/swirl.png);
-  mask-repeat: no-repeat;
-  z-index: -4; /* Zorgt ervoor dat het naar de achtergrond gaat */
-  top: 0%;
-  margin-top: 2em;
-  }
-
-article {
-  display: flex;
-  flex-wrap:nowrap;
-  align-items: center;
-}
-
-section img{
-    position: relative;
-    z-index: -1;
-}
-
-section h2 {
-  position: absolute;
-  top: 125%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: -1;
-}
-
-
-section>img {
+  position: relative;
+  background-color: var(--background-color);
   width: 100vw;
-  margin-top: -8.5px;
-  height: 100vh;
-}
-
-.about-me p {
-  position: absolute;
-  top: 145%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: large;
-  width: 60ch;
-}
-
-.about-me img:nth-child(2){
-  position: absolute;
-  top: 135%;
-  left: 5%;
-  width: 20vw;
-  height: 45vh;
-}
-
-.about-me img:last-of-type{
-  position: absolute;
-  top: 95%;
-  right: 2%;
-  height: 70vh;
-  width: 35vw;
-}
-
-section p {
-  position: absolute;
-  top: 25%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: large;
-}
-
-.projecten h1, .mijn-werk h1, .contact h1{
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.projecten2 h1, .projecten h2 {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.projecten2 img {
-  height: 100vh;
-}
-
-/* nog even naar kijken staat naast elkaar moet onder elkaar komen te staan */
-.contact div {
+  padding: .8rem;
   display: flex;
-  border: solid #685F5F;
-  padding: 5% 12% 5% 7%;
-  background-color: #F0E9E3;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  border-radius: 10px;
-  transform: translate(-50%, -50%);
-  margin: 20px;
-  list-style-type: none;
+  justify-content: center;
 }
 
-.contactlist{
-  flex-wrap: wrap;
-  width: 3em;
+/* Pagina 1 */
+body {
+  background-color: var(--background-color);
 }
 
-.containerprojecten {
-  position: absolute;
-  top: 30%;
-  left: 20%;
+section:first-of-type {
+  background-color: var(--background-color);
   display: flex;
+  justify-content: center;
+  max-width: 60rem;
+}
+
+section:first-of-type div, [class="home"] section:first-of-type ul{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  }
-
-.front > img {
-  height: 35vh; 
-  width: 30vw;
-  border-radius: 10px;
-    /* Misschien in plaats van die border een schadow of een andere kleur */
+  padding: 1rem;
 }
 
-.pollution img{
-  width: 40vw;
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: -1;
+[class="home"] section:first-of-type ul{
+  flex-direction: row;
+  gap:1rem;
 }
 
-.uitlegpollution {
-  position: absolute;
-  top: 88%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 3em;
+[class="home"] section:first-of-type ul li img {
+  max-width: 3rem;
 }
 
-/* Code voor de card rotation van: https://codepen.io/8manteam/pen/LYoKavX met eigen aanpassingen natuurlijk */
-.cardBox {
-  float: left;
-  margin: 1% 0 0 1%;
-  perspective: 800px;
-  transition: all 0.3s ease 0s;
-  width: 30vw;
-}
-  
-.cardBox:hover .card {
-  transform: rotateY(180deg);
-  }
-  
-.card {
-  background: #685F5F;
-  border-radius: 10px;
-  height: 35vh;
-  transform-style: preserve-3d;
-  transition: transform 0.4s ease 0s;
-  width: 30vw;
-}
-
-.card p {
-  margin:4em 0 2em 0;
-}
-
-  .card .front,
-.card .back {
-  backface-visibility: hidden;
-  box-sizing: border-box;
+section:first-of-type div > button {
+  background-color: hotpink;
   color: white;
-  display: block;
-  font-size: 1.2em;
-  height: 100%;
-  border-radius: 10px;
-  position: absolute;
-  text-align: center;
-  width: 100%;
+  padding: .6rem;
+  border-radius: .5rem;
+  margin: 1rem;
+  border: none;
 }
 
-.card .back {
-    transform: rotateY(180deg);
+
+section:first-of-type>img {
+  max-width: 50vw;
+  border-radius: 100px 0;
+  border: 1px solid hotpink;
+    box-shadow: 0px 3px 31px hotpink;
+    margin: 2rem
+}
+
+section:nth-of-type(2) {
+  background-color: var(--element-color);
+  color: white;
+  padding: 1rem;
+  text-align: center; 
+  max-height: 60vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+section:nth-of-type(2) p {
+  line-height: 1.5em;
+  max-width: 30rem;
+  padding: 1rem 0;
+}
+
+
+/* Contactpagina */
+[class="contactpagina"] section,  [class="zoekeenboek"] section {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
+
+[class="contactpagina"] section ul {
+  margin-top: 3rem;
+  padding: 3rem;
+  border: 6px dotted hotpink;
+}
+
+
+[class="contactpagina"] section li{
+  padding: .5rem;
+}
+
+[class="contactpagina"] footer {
+  position: absolute;
+  bottom: 0;
+}
+
+
+
+
+/* Projecten pagina */
+[class="mijnprojectenpagina"] section, [class="pollutionparty"] section:nth-of-type(1), [class="mojo"] section:nth-of-type(1){
+  flex-direction: column;
+  padding: 1rem;
+  align-items: center;
+  gap: 1rem;
+}
+
+@media (width<600px) {
+  [class="mijnprojectenpagina"] article {
+    flex-direction: column;
   }
-
-.card .back a:hover {
-  background: #fff;
-  color: #333;
-  text-shadow: 0 0 1px #333;
 }
 
-.back a {
-  color: #333;
-  background-color:#F0E9E3; 
-  padding: 5px;
-  border-radius: 10px;
-}
+ [class="mijnprojectenpagina"] article a{ 
+  display: flex;
+  flex-direction: row;
+  padding: 1rem;
+  color: var(--text-color);
+ }
 
-.back p {
-  width: 30ch;
-}
+ [class="mijnprojectenpagina"] article:nth-of-type(2) a{
+  background-color: var(--element-color);
+  color: white;
+  border-radius: 1rem;
+ }
 
-/* pagina pollution party, met code van https://www.w3schools.com/howto/howto_js_slideshow.asp  */
-/* Slideshow container */
-.slideshow-container, .zebinterface {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-}
+ [class="mijnprojectenpagina"] article:nth-of-type(3) img, [class="mojo"] img{
+  max-height: 20rem;
+  width: fit-content;
+ }
 
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: #F0E9E3;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
+ [class="mijnprojectenpagina"] article img {
+  max-width: 30rem;
+ }
 
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
+ @media (width< 500px) {
+  [class="mijnprojectenpagina"] article img{
+    max-width: 10rem;
+  }
+ }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: #685F5F;
-}
+ [class="mijnprojectenpagina"] article div {
+  max-width: 45vw;
+ }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #F0E9E3;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
 
-.active {
-  background-color: #717171;
-}
+ /* Detailpagina zoek een boek */
+ [class="zoekeenboek"] iframe {
+  width: 70vw;
+  padding: 1rem;
+ }
 
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
+  /* Detailpagina zoek een boek */
 
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
+
+
+
