--- a/style.css
+++ b/style.css
@@ -248,10 +248,42 @@ section:nth-of-type(2) p {
  }
 
  /* Detailpagina zoek een boek */
+ [class="zoekeenboek"] section:nth-of-type(1)>div img {
+ max-width: 100vw;
+ }
+
+ [class="zoekeenboek"] section:nth-of-type(1)>div {
+  position: relative;
+ }
+
+ @media (width>60em) {
+  [class="zoekeenboek"] section:nth-of-type(1) div > img {
+    height: 50rem;
+    object-fit: cover;
+    object-position: 50% 20%;
+    width: 100vw;
+  }
+ }
+
+ [class="zoekeenboek"] section:nth-of-type(1) div > h1 {
+  position: absolute;
+  bottom: 0;
+  z-index: 2;
+  background-color: var(--background-color);
+  width: 100vw;
+  border-radius: 30px;
+ }
+
+
+
  [class="zoekeenboek"] iframe {
   width: 60vw;
   padding: 1rem;
  }
+
+
+
+
 
   /* Detailpagina pollution party */
 
