--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h2 {
   font-size: 25px;
 }
 
-p, ul li {
+p, ul li, a {
   font-size: var(--font-size-small);
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   list-style-type: none;
@@ -57,8 +57,10 @@ header nav ul li a{
 
 
 /* Vormgeving footer */
+
 footer {
-  position: relative;
+  position: fixed;
+  bottom: 0;
   background-color: var(--background-color);
   width: 100vw;
   padding: .8rem;
@@ -66,9 +68,18 @@ footer {
   justify-content: center;
 }
 
+footer li {
+  font-size: 15px;
+}
+
+.mijnprojectenpagina {
+  position: relative;
+}
+
 
 body {
   background-color: var(--background-color);
+  padding-bottom: 5rem;
 }
 
 main {
@@ -78,8 +89,7 @@ main {
 }
 
 section {
-  padding: 1rem;
-  padding: 1rem;
+  padding: 4rem;
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -92,7 +102,7 @@ section img {
 
 
 /* Pagina Homepagina  */
-[class="home"] section:first-of-type {
+[class="home"] section:first-of-type, [class="contactpagina"] section:first-of-type {
   background-color: var(--background-color);
   display: flex;
   justify-content: center;
@@ -116,7 +126,7 @@ section:first-of-type div, [class="home"] section:first-of-type ul{
   max-width: 3rem;
 }
 
-[class="home"] section:first-of-type div > a {
+[class="home"] section:first-of-type div > a, [class="contactpagina"] main section:nth-of-type(2) a {
   background-color: #d180ac;
   color: white;
   padding: .6rem;
@@ -127,7 +137,7 @@ section:first-of-type div, [class="home"] section:first-of-type ul{
 }
 
 
-[class="home"] section:first-of-type>img {
+[class="home"] section:first-of-type>img, [class="contactpagina"] section:first-of-type > img {
   max-width: 50vw;
   border-radius: 100px 0;
   border: 1px solid #d180ac;
@@ -155,19 +165,31 @@ section:first-of-type div, [class="home"] section:first-of-type ul{
   }
 }
 
-section:nth-of-type(2) {
-  background-color: var(--element-color);
-  color: white;
-  padding: 1rem;
-  text-align: center; 
-  max-height: 60vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 60vw;
-  border-radius: 20px;
+/* [class="home"] main section:nth-of-type(2) {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 }
+
+[class="home"] main section:nth-of-type(2) h2{
+  grid-area: 1 / 1 / 2 / 4;
+} */
+
+[class="home"] main section:nth-of-type(2) > div {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+[class="home"] main section:nth-of-type(2)>  div article {
+  max-width: 22rem;
+}
+
+[class="home"] main section:nth-of-type(2)> div article img {
+  max-width: 25vw;
+  max-height: 22vh;
+}
+
 
 section:nth-of-type(2) p {
   line-height: 1.5em;
@@ -177,12 +199,9 @@ section:nth-of-type(2) p {
 
 
 /* Contactpagina */
-[class="contactpagina"] section,  [class="zoekeenboek"] section {
-  flex-direction: column;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem;
+
+[class="contactpagina"] section:first-of-type > img {
+  max-width: 30%;
 }
 
 [class="contactpagina"] section ul {
@@ -197,14 +216,6 @@ section:nth-of-type(2) p {
 [class="contactpagina"] section li{
   padding: .5rem;
 }
-
-[class="contactpagina"] footer {
-  position: absolute;
-  bottom: 0;
-}
-
-
-
 
 /* Projecten pagina */
 
@@ -227,10 +238,7 @@ section:nth-of-type(2) p {
   background-color: #bd99a2;
  }
 
- [class="mijnprojectenpagina"] article:nth-of-type(3) img, [class="mojo"] img{
-  max-height: 20rem;
-  width: fit-content;
- }
+ 
 
  [class="mijnprojectenpagina"] article div {
   max-width: 45vw;
@@ -249,7 +257,7 @@ section:nth-of-type(2) p {
 
  /* Detailpagina zoek een boek */
  [class="zoekeenboek"] section:nth-of-type(1)>div img {
- max-width: 100vw;
+  max-width: 100vw;
  }
 
  [class="zoekeenboek"] section:nth-of-type(1)>div {
@@ -272,6 +280,7 @@ section:nth-of-type(2) p {
   background-color: var(--background-color);
   width: 100vw;
   border-radius: 30px;
+  box-shadow: 10px 5px 5px gray;
  }
 
 
