--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
   --element-color: #8f788d;
   --fonts-text: "Open sans", "serif"; 
   --second-color: #d1c7c0;
+  --roze-color: #d180ac; 
 }
 
 
@@ -81,7 +82,6 @@ a:hover {
 footer {
   position: absolute;
   bottom: 0;
-  background-color: var(--background-color);
   width: 100vw;
   padding: .8rem;
   display: flex;
@@ -93,7 +93,16 @@ footer li, footer p {
   font-size: 15px;
 }
 
-
+footer span {
+  background-color: var(--roze-color);
+  clip-path: polygon(100% 30%, 0 100%, 100% 100%);
+  height: 136px;
+  max-width: 490px;
+  min-width: 100vw;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
 
 .mijnprojectenpagina {
   position: relative;
@@ -170,17 +179,7 @@ section:first-of-type div p {
     box-shadow: 0px 3px 31px #d180ac;
     margin: 2rem
 }
-@media (width<555px){
-  [class="home"] section:first-of-type {
-    flex-direction: column;
-    align-items: center;
-  }
 
-  p {
-   font-size: 15px;
-  }
-
-}
 [class="home"] section:first-of-type>img {
   max-width: 50vw;
 }
@@ -347,3 +346,26 @@ section:first-of-type div div {
     max-width: 70vw;
   }
  }
+
+ @media (width<555px){
+  [class="home"] section:first-of-type {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  p {
+   font-size: 15px;
+  }
+
+  .home section article {
+    width: 90vw;
+  }
+
+  [class="home"] main section:nth-of-type(2) > div {
+    grid-template-columns: repeat(auto-fit, minmax(100vw, 1fr));
+  }
+
+  [class="home"] main section:nth-of-type(2) > div img {
+    max-width: 90vw;
+  }
+}
