--- a/style.css
+++ b/style.css
@@ -63,10 +63,10 @@ header nav ul li a{
   color: var(--text-color);
 }
 
-article div > img:hover {
+/* article div > img:hover {
   transform: scale(150%);
   transition: 1s ease;
-}
+} */
 
 header nav ul li:hover {
   transform: scale(125%);
@@ -162,7 +162,7 @@ section:first-of-type div p {
 }
 
 [class="home"] section:first-of-type div > a, [class="contactpagina"] main section div a, .mojo section:nth-of-type(3) a{
-  background-color: #d180ac;
+  background-color: var(--roze-color);
   color: white;
   padding: .6rem;
   border-radius: .5rem;
@@ -175,8 +175,8 @@ section:first-of-type div p {
 [class="home"] section:first-of-type>img, [class="contactpagina"] section:first-of-type > img {
   max-width: 50vw;
   border-radius: 100px 0;
-  border: 1px solid #d180ac;
-    box-shadow: 0px 3px 31px #d180ac;
+  border: 1px solid var(--roze-color);
+    box-shadow: 0px 3px 31px var(--roze-color);
     margin: 2rem
 }
 
@@ -308,13 +308,15 @@ section:first-of-type div div {
 
  }
 
- section:nth-of-type(2) article article {
+ section:nth-of-type(2) article article, .pollutionparty section:nth-of-type(2)  article:nth-of-type(2) {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20vw, 1fr));
+  gap: 1rem;
  }
 
- section:nth-of-type(2) article article img {
+ section:nth-of-type(2) article article img, .pollutionparty section:nth-of-type(2)  article:nth-of-type(2) img{
   max-width: 35vw;
+  border: solid 1.5px var(--roze-color);
  }
  
 
@@ -323,6 +325,10 @@ section:first-of-type div div {
 
 .pollutionparty section:first-of-type article:first-of-type ul li {
   list-style-type: circle;
+}
+
+.pollutionparty section:first-of-type article:first-of-type ul {
+  padding-left: 1.5rem;
 }
 
 .pollutionparty section:nth-of-type(2) > div {
