--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ h2 {
 }
 
 h3 {
-  font-size: 24px;
+  font-family: var(--font-headers);
+  font-size: 22px;
 }
 
 p, ul li, a {
@@ -321,8 +322,6 @@ section:first-of-type div div {
  
 
   /* Detailpagina pollution party */
-
-
 .pollutionparty section:first-of-type article:first-of-type ul li {
   list-style-type: circle;
 }
@@ -340,6 +339,11 @@ section:first-of-type div div {
   width: 36vw;
 }
 
+.pollutionparty section:nth-of-type(2) article:nth-of-type(3) div, .pollutionparty section:nth-of-type(2) article:nth-of-type(4) div{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 
 @media (width>60em) {
   [class="zoekeenboek"] section:nth-of-type(1) div > img, [class="pollutionparty"] section:nth-of-type(1) div > img, [class="mojo"] section:nth-of-type(1) div > img  {
